| Summary: | ASTERISK-20405: MessageSend() suggests 'from' isn't required in XMPP message responses, but it is | ||
| Reporter: | Leif Madsen (lmadsen) | Labels: | |
| Date Opened: | 2012-09-11 08:11:59 | Date Closed: | 2012-10-05 20:51:27 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_xmpp |
| Versions: | 11.0.0-beta1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If you do 'core show application MessageSend' and look at the 'from' field documentation, nothing about XMPP is listed (it is in the 'to' field). Also, the syntax for the MessageSend() seems to indicate the 'from' field is optional, which it doesn't look to be. The following error is found when not passing the 'from'. {code} -- Executing [s@IncomingMessages:8] MessageSend("Message/ast_msg_queue", "xmpp:leif@leifmadsen.com") in new stack [Sep 11 07:36:55] ERROR[17839][C-00000000]: res_xmpp.c:2033 xmpp_send_cb: MESSAGE(from) of '' invalid for XMPP {code} When sending via XMPP, it needs to be: xmpp:asterisk where 'asterisk' is the [account_name] as defined in xmpp.conf | ||
| Comments: | By: Richard Mudgett (rmudgett) 2012-09-11 09:54:52.645-0500 Does res_jabber require a 'to' value as well? Or is this specific to res_xmpp? | ||